[package]
name = "lib_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features=["ws"] }
axum-tracing-opentelemetry = {version= "0.21.1"}
futures = "0.3"
opentelemetry = "0.25.0"
opentelemetry-otlp = "0.25.0"
opentelemetry-semantic-conventions = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
tokio = {version = "1.38.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"
tracing-opentelemetry-instrumentation-sdk = "0.21.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
